// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePage keepMounted sidePage always in the document 1`] = `
<body
  style=""
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    class="QxOverScreen QxOverScreen_placement_right QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-jjk8i-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="QxBackdrop css-kd6k92-SxBackdrop-root"
      data-component="QxBackdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-6e2bg8-QxSidePage-scrollContainer-QxModal-scrollContainer"
      data-component="QxOverScreen-child"
      style="opacity: 0; transform: translate(1024px, 0px); z-index: -1;"
    >
      <div
        class="QxModal-box QxSidePage-box css-1awz0sw-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-a0et6t-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-1lmvl89-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1bxoecb-QxHeaderBlock-title"
            >
              Title
            </div>
            <div
              class="QxHeaderBlock-subTitle css-1sju9ey-QxHeaderBlock-subTitle"
            >
              SubTitle
            </div>
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-9uuoep-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="QxModal-body css-l3ia4v-QxModal-body"
        >
          Body
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage keepMounted sidePage always in the document 2`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-h40h3z-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-kd6k92-SxBackdrop-root"
      data-component="QxBackdrop"
      style="opacity: 1; transition: opacity 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-6e2bg8-QxSidePage-scrollContainer-QxModal-scrollContainer"
      data-component="QxOverScreen-child"
      style="opacity: 1; transform: translate(0px, 0px); transition: transform 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="QxModal-box QxSidePage-box css-1awz0sw-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-a0et6t-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-1lmvl89-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1bxoecb-QxHeaderBlock-title"
            >
              Title
            </div>
            <div
              class="QxHeaderBlock-subTitle css-1sju9ey-QxHeaderBlock-subTitle"
            >
              SubTitle
            </div>
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-9uuoep-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="QxModal-body css-l3ia4v-QxModal-body"
          style="min-height: NaNpx;"
        >
          Body
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage sidePage in the document 1`] = `
<body
  style=""
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`SidePage sidePage in the document 2`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxModal_hasFooter QxSidePage css-h40h3z-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-kd6k92-SxBackdrop-root"
      data-component="QxBackdrop"
      style="opacity: 1; transition: opacity 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-6e2bg8-QxSidePage-scrollContainer-QxModal-scrollContainer"
      data-component="QxOverScreen-child"
      style="opacity: 1; transform: translate(0px, 0px); transition: transform 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="QxModal-box QxSidePage-box css-1awz0sw-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-a0et6t-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-1lmvl89-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1bxoecb-QxHeaderBlock-title"
            >
              Title
            </div>
            <div
              class="QxHeaderBlock-subTitle css-1sju9ey-QxHeaderBlock-subTitle"
            >
              SubTitle
            </div>
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-9uuoep-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="QxModal-body css-nwhtp5-QxModal-body"
          style="min-height: NaNpx;"
        >
          Body
        </div>
        <div
          class="QxFooterBlock QxFooterBlock_size_medium QxFooterBlock_direction_vertical QxSidePage-footerBlock css-1yvchvp-QxSidePage-footerBlock-QxFooterBlock-root"
        >
          <button
            class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
            type="button"
          >
            <div
              class="QxButton-content css-hh58qu-QxButton-content"
            >
              Success
            </div>
          </button>
          <button
            class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-tcyd1-QxBaseButton-root-QxButton-root"
            type="button"
          >
            <div
              class="QxButton-content css-hh58qu-QxButton-content"
            >
              Secondary
            </div>
          </button>
          <button
            class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-tjh25m-QxBaseButton-root-QxButton-root"
            type="button"
          >
            <div
              class="QxButton-content css-hh58qu-QxButton-content"
            >
              Danger
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage style params size medium 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div />
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-h40h3z-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    data-testid="testStyleParams-size-medium"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-kd6k92-SxBackdrop-root"
      data-component="QxBackdrop"
      style="opacity: 1; transition: opacity 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-6e2bg8-QxSidePage-scrollContainer-QxModal-scrollContainer"
      data-component="QxOverScreen-child"
      style="opacity: 1; transform: translate(0px, 0px); transition: transform 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="QxModal-box QxSidePage-box css-1awz0sw-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-a0et6t-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-1lmvl89-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1bxoecb-QxHeaderBlock-title"
            />
            <div
              class="QxHeaderBlock-subTitle css-1sju9ey-QxHeaderBlock-subTitle"
            />
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-9uuoep-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage style params size small 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div />
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_small QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-h40h3z-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    data-testid="testStyleParams-size-small"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-kd6k92-SxBackdrop-root"
      data-component="QxBackdrop"
      style="opacity: 1; transition: opacity 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-6e2bg8-QxSidePage-scrollContainer-QxModal-scrollContainer"
      data-component="QxOverScreen-child"
      style="opacity: 1; transform: translate(0px, 0px); transition: transform 250ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="QxModal-box QxSidePage-box css-1bqem3z-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_small css-130u650-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-1lmvl89-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-152ga7g-QxHeaderBlock-title"
            />
            <div
              class="QxHeaderBlock-subTitle css-fm9gst-QxHeaderBlock-subTitle"
            />
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-9uuoep-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
